# web

./: .gitignore  CMakeLists.txt  README.md  README_GAME_ENGINE.md  build.bat  pom.xml  run.bat  setup.bat
assets/shaders/: basic.frag
src/Demo/: main.cpp
src/Engine/: Camera.cpp  Camera.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Utils.h  Window.cpp  Window.h
src/Engine/ECS/: Component.h  Entity.h  Scene.h
src/Engine/Physics/: PhysicsSystem.cpp  PhysicsSystem.h
src/main/java/com/vacation/model/: Destination.java  User.java
src/main/java/com/vacation/service/: RDFService.java  XMLService.java
src/main/java/com/vacation/servlet/: RDFServlet.java  XMLServlet.java
src/main/resources/data/: destinations.rdf  destinations.xml  destinations.xsd  sparql_owl.txt  vacation-ontology.owl
src/main/resources/xslt/: destinations.xsl
src/main/webapp/: index.html
src/main/webapp/WEB-INF/: web.xml
src/main/webapp/css/: style.css
src/main/webapp/js/: app.js
